Modified index.html, style-guide.md, styles.css for blog preview card project. Adjusted attribution styling in styles.css to position it fixed at the bottom of the page, ensuring it remains visible regardless of content length. Updated index.html to reflect changes in attribution styling and added necessary classes for proper formatting. Revised style-guide.md to document the changes made to the attribution section and provide guidance on how to implement similar styling in future projects.

--- a/styles.css
+++ b/styles.css
@@ -3,10 +3,32 @@ body {
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  font-family: 'Inter', sans-serif;
-  background-color: #f4d04e;
+  font-family: 'Figtree', sans-serif;
+  line-height: 150%;
+  letter-spacing: 0px;
+  background-color: hsl(47, 88%, 63%);
   height: 100vh;
   margin: 0;
+}
+
+p{
+  color: hsl(0, 0%, 7%);
+}
+
+p.datePub{
+  font-size: 14px;
+  font-weight: 500;
+}
+
+.title{
+  font-size: 24px;
+  font-weight: 800;
+}
+
+p.description{
+  color: hsl(0, 0%, 42%);
+  font-size: 16px;
+  font-weight: 500;
 }
 
 .container {
@@ -17,12 +39,24 @@ body {
   background-color: hsl(210, 46%, 95%);
   width: 327px;
   height:fit-content;
-  border: solid 1px #111;
-  box-shadow: 8px 8px #000000;
+  border: solid 1px hsl(0, 0%, 7%);
+  box-shadow: 8px 8px hsl(0, 0%, 0%);
   border-radius: 20px;
   padding: 24px;
   gap: 1.5rem;
-  background-color:white;
+  background-color:hsl(0, 0%, 100%);
+}
+
+.category{
+  display: flex;
+  width: fit-content;
+  height: fit-content;
+  border-radius: 4px;
+  padding: 4px 12px 4px 12px;
+  align-items: center;
+  background-color: hsl(47, 88%, 63%);
+  font-weight: 800;
+  font-size: 14px;
 }
 
 .author-info {
@@ -33,9 +67,10 @@ body {
 }
 
 .attribution {
+  position:fixed;
+  bottom: 20px;
   font-size: 0.6875rem;
   text-align: center;
-  align-items: bottom;
 }
 .attribution a {
   color: hsl(228, 45%, 44%);
